TEST_PROGRAMS/INVALID/david_zhou/invalid3.min
# hanging expression

5 + 4;
